--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,29 @@
 language: ruby
+
 rvm:
   - 1.9.3
   - 1.8.7
+  - 2.0.0
+  - 2.1.6
+  - 2.2.2
+
 env:
-  - "PUPPET_VERSION=3.0.2"
-  - "PUPPET_VERSION=3.7.3"
+  - PUPPET_VERSION=3.0.2
+  - PUPPET_VERSION=3.7.3
+  - PUPPET_VERSION=4.0.0
+  - PUPPET_VERSION=4.1.0
+
+matrix:
+  exclude:
+    - rvm: 1.8.7
+      env: PUPPET_VERSION=4.0.0
+    - rvm: 1.8.7
+      env: PUPPET_VERSION=4.1.0
+    - rvm: 2.0.0
+      env: PUPPET_VERSION=3.0.2
+    - rvm: 2.1.6
+      env: PUPPET_VERSION=3.0.2
+    - rvm: 2.2.2
+      env: PUPPET_VERSION=3.0.2
+    - rvm: 2.2.2
+      env: PUPPET_VERSION=3.7.3
