Added verbose option to rake task

--- a/test/cases/working/Rakefile
+++ b/test/cases/working/Rakefile
@@ -18,5 +18,7 @@ namespace :catalog do
 
     t.include_pattern = ENV["include"]
     t.exclude_pattern = ENV["exclude"]
+
+    t.verbose = true
   end
 end
