Add 2.0.0-p645 3.8.5 to test matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ rvm:
 env:
   - PUPPET_VERSION=3.0.2
   - PUPPET_VERSION=3.7.3
+  - PUPPET_VERSION=3.8.5
   - PUPPET_VERSION=4.0.0
   - PUPPET_VERSION=4.1.0
 
