--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ rvm:
   - 2.0.0
   - 2.1.6
   - 2.2.2
+  - 2.3.0
 
 env:
   - PUPPET_VERSION=3.0.2
@@ -13,6 +14,7 @@ env:
   - PUPPET_VERSION=3.8.5
   - PUPPET_VERSION=4.0.0
   - PUPPET_VERSION=4.1.0
+  - PUPPET_VERSION=4.3.2
 
 matrix:
   exclude:
@@ -20,6 +22,8 @@ matrix:
       env: PUPPET_VERSION=4.0.0
     - rvm: 1.8.7
       env: PUPPET_VERSION=4.1.0
+    - rvm: 1.8.7
+      env: PUPPET_VERSION=4.3.2
     - rvm: 2.0.0
       env: PUPPET_VERSION=3.0.2
     - rvm: 2.1.6
